<resources>
    <string name="app_name">JsonWebService</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_stringRequest">StringRequest</string>
    <string name="menu_jsonObjectRequest">jsonObjectRequest</string>
    <string name="menu_jsonObjectRequestPost">jsonObjectRequestPost</string>
    <string name="menu_jsonArrayRequest">jsonArrayRequest</string>
    <string name="menu_jsonArrayRequestPost">jsonArrayRequestPost</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>