<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_send_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_stringRequest"
            android:icon="@drawable/ic_baseline_send_24"
            android:title="@string/menu_stringRequest" />
        <item
            android:id="@+id/nav_jsonObjectRequest"
            android:icon="@drawable/ic_baseline_send_24"
            android:title="@string/menu_jsonObjectRequest" />
        <item
            android:id="@+id/nav_jsonObjectRequestPost"
            android:icon="@drawable/ic_baseline_send_24"
            android:title="@string/menu_jsonObjectRequestPost" />
        <item
            android:id="@+id/nav_jsonArrayRequest"
            android:icon="@drawable/ic_baseline_send_24"
            android:title="@string/menu_jsonArrayRequest" />
        <item
            android:id="@+id/nav_jsonArrayRequestPost"
            android:icon="@drawable/ic_baseline_send_24"
            android:title="@string/menu_jsonArrayRequestPost" />

    </group>
</menu>
